# miso

./: .gitignore  .gitmodules  CMakeLists.txt  miso.h
tests/: 01_simple_connect.cpp  02_class_connect.cpp  03_sender.cpp  04_simulate_gui.cpp  CMakeLists.txt
